proyecto2/kubernetes/rust-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api-deployment
  namespace: proyecto2  # Usa un namespace como se sugiere en el documento
  labels:
    app: rust-api
spec:
  replicas: 1  # Comienza con 1 réplica (mínimo según el documento)
  selector:
    matchLabels:
      app: rust-api
  template:
    metadata:
      labels:
        app: rust-api
    spec:
      containers:
      - name: rust-api
        image: 34.132.81.228.nip.io/proyecto2sopes/rust-api:latest  # Imagen de Harbor
        ports:
        - containerPort: 8080  # Puerto donde tu API REST en Rust escucha
        resources:
          requests:
            cpu: "75m"  # Solicita un mínimo de CPU
            memory: "256Mi"
          limits:
            cpu: "400m"  # Límite de CPU para que HPA funcione bien
            memory: "512Mi"
