proyecto2/kubernetes/go-deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-deployment
  namespace: proyecto2
  labels:
    app: go-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-api
  template:
    metadata:
      labels:
        app: go-api
    spec:
      containers:
      - name: go-api
        image: 34.132.81.228.nip.io/proyecto2sopes/go-api:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "512Mi"
          limits:
            cpu: "400m"
            memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: go-api-service
  namespace: proyecto2
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: go-api
  type: ClusterIP
