proyecto2/kubernetes/rust-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rust-api-service
  namespace: proyecto2
  labels:
    app: rust-api
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: rust-api
  type: ClusterIP
