proyecto2/kubernetes/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: proyecto2
spec:
  ingressClassName: nginx  # Especifica la clase de Ingress
  rules:
  - host: grafana.35.232.228.213.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
